2/4/2025 ter
	Finished DigitInstance conditional selection. Added test case.
	Added support to crust sandwich sudoku enforcing that the crusts are always the same two, unknown, digits. Added test case.
	Added test case for InOrder clues.
	Added RepeatReached conditional termination.

2/4/2025 bis
	Provided return codes for all solving methods.
	Added support for conditional count lines.
	Modified conditional selections to include BeforeDigits, AfterDigits, and NextToDigits.
	Partial implementation of DigitInstance conditional selection..just pushing to pass code home.

2/4/2025
	Added support for InOrder clues.

2/2/2025
	Added assertion to ensure solutions are not roped. Not so much a constraint, as much as for grid searching.
	Greatly improved performance for 10 Lines, added test case, and added support for closed loop 10 lines.

1/29/2025
	Added support for Broken Thermos.
	Added additional test cases.

1/28/2025
	Added support for Double Thermos, which interleave an even and an odd thermo, which act independently. Added test cases.
	Added support for Removed Bulb Thermos, where a bulb may be placed anywhere on the thermo, resulting in one or two thermos.
	
1/27/2025 ter-ducken?
	Extended hangingSum 'Location' option to allow multiple specifications, including a new indexing option. Multiple specifications are joined with logical OR. Added test case.

1/27/2025 ter
	Added support for conditional sandwich sums. Sandwich is defined by a pair of digits as normal, but the digits to be summed can be selected using any method from hanging sums. Available as an option for crust sandwich sudoku as well, where sandwich clues defined by crusts are filtered with the selection criteria. Added test case.