@@ -1,3 +1,8 @@
+2/5/2025
+	Reviewed use of self.minDigit and self.maxDigit in code, as relates to doublers and other transforms. Made several changes to ensure variable bounds are sized appropriately for expanded cell values.
+	Added support for InOrder clues to force adjacency as an option.
+	Added some test cases.
+
 2/4/2025 ter
 	Finished DigitInstance conditional selection. Added test case.
 	Added support to crust sandwich sudoku enforcing that the crusts are always the same two, unknown, digits. Added test case.
